# TinyVM

./: .gitignore  .travis.yml  AssemblyReference.md  CMakeLists.txt  README.md  assembler.cpp  instruction.cpp  instruction.hpp  instruction_implementation.cpp  instruction_support.cpp  instruction_support.hpp  main.cpp  tasm.py  vm.cpp  vm.hpp  vmtypes.hpp
TinyVM/: CMakeLists.txt  assembler.cpp  assembler_details.cpp  assembler_details.hpp  assembler_filemapping.cpp  config.hpp.in  instruction.hpp  instruction_implementation.cpp  instruction_implementation.hpp  instruction_support.cpp  main.cpp  platform.hpp  platform_generic.cpp  platform_posix.cpp  util.hpp  vm.cpp  vm.hpp  vmtypes.hpp
examples/: gcd.tasm
